refactor: refactor `Task2` test class: improve readability, simplify assertions, and remove unused imports.